[package]
name = "miracl03"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcore={path="mcore", version="0.1.0",features = ["std"]}
rand_core = { version = "0.5", features = ["std"] }
rand = "0.4"
sha2="0.9.8"

[features]
# Defines a feature named `webp` that does not enable any other features.
std = []
